--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "potato_plant_mission_encoder"
+authors = [ "Bailey Danyluk <baileydanyluk@gmail.com>" ]
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+uuid = { version = " 1.2", features = ["v4"] }
