--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.2", features = ["v4"] }
+thiserror = { version = "1.0" }
